logs/dag_id=user_processing/run_id=manual__2023-12-23T15:30:52.645597+00:00/task_id=store_user/attempt=1.log
[2023-12-23T15:31:00.086+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2023-12-23T15:30:52.645597+00:00 [queued]>
[2023-12-23T15:31:00.091+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2023-12-23T15:30:52.645597+00:00 [queued]>
[2023-12-23T15:31:00.091+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-12-23T15:31:00.091+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-12-23T15:31:00.092+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-12-23T15:31:00.098+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): store_user> on 2023-12-23 15:30:52.645597+00:00
[2023-12-23T15:31:00.101+0000] {standard_task_runner.py:55} INFO - Started process 14132 to run task
[2023-12-23T15:31:00.103+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'store_user', 'manual__2023-12-23T15:30:52.645597+00:00', '--job-id', '91', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmpwino_68t']
[2023-12-23T15:31:00.105+0000] {standard_task_runner.py:83} INFO - Job 91: Subtask store_user
[2023-12-23T15:31:00.138+0000] {task_command.py:376} INFO - Running <TaskInstance: user_processing.store_user manual__2023-12-23T15:30:52.645597+00:00 [running]> on host 29c739d23fae
[2023-12-23T15:31:00.171+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2023-12-23T15:30:52.645597+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-12-23T15:30:52.645597+00:00
[2023-12-23T15:31:00.172+0000] {postgres.py:129} INFO - Running copy expert: COPY users FROM stdin WITH DELIMETER as ',', filename: /tmp/processed_user.csv
[2023-12-23T15:31:00.176+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-12-23T15:31:00.179+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/user_processing.py", line 30, in _store_user
    filename = '/tmp/processed_user.csv'
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 137, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "DELIMETER"
LINE 1: COPY users FROM stdin WITH DELIMETER as ','
                                   ^

[2023-12-23T15:31:00.184+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=user_processing, task_id=store_user, execution_date=20231223T153052, start_date=20231223T153100, end_date=20231223T153100
[2023-12-23T15:31:00.189+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 91 for task store_user (syntax error at or near "DELIMETER"
LINE 1: COPY users FROM stdin WITH DELIMETER as ','
                                   ^
; 14132)
[2023-12-23T15:31:00.197+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-12-23T15:31:00.208+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
